--- a/templates/base.html
+++ b/templates/base.html
@@ -25,9 +25,24 @@
 
 <a href="{% url 'login' %}">login</a><hr>
 <a href="{% url 'register' %}">register</a><hr>
+
 <a href="{% url 'bai_du_map' %}">baidumap</a><hr>
 
 <a href="{% url 'test' %}">test</a><hr>
+
+
+    <a href="{% url 'add_park' %}">添加车位信息</a><hr>
+    <a href="{% url 'center' %}">个人中心</a><hr>
+    <a href="{% url 'index' %}">首页</a><hr>
+    <a href="{% url 'test' %}">test</a><hr>
+    <a href="{% url 'test' %}">test</a><hr>
+    <a href="{% url 'test' %}">test</a><hr>
+    <a href="{% url 'test' %}">test</a><hr>
+    <a href="{% url 'test' %}">test</a><hr>
+    <a href="{% url 'test' %}">test</a><hr>
+    <a href="{% url 'test' %}">test</a><hr>
+    <a href="{% url 'test' %}">test</a><hr>
+
 
 {% if user.is_authenticated %}
     <h4>{{ user.username }} <a href="{% url 'logout' %}">Logout</a></h4>
