--- a/templates/bai_du_map.html
+++ b/templates/bai_du_map.html
@@ -1,98 +1,190 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html>
-    <head>
-        <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Map</title>
-        <style type="text/css">
-            html{height:100%}
-            body{height:100%;margin:0px;padding:0px}
-            #container{height:100%}
-        </style>
-        <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=w1PFgbVb9cHY25GajgfS2chYFKH0inev">
-        </script>
-    </head>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>前端定位模块</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+    <script charset="utf-8" src="https://map.qq.com/api/js?v=2.exp&key=SPHBZ-USUC3-FT43D-YDVWO-G7CCZ-FCBND"></script>
+    <script type="text/javascript" src="https://apis.map.qq.com/tools/geolocation/min?key=SPHBZ-USUC3-FT43D-YDVWO-G7CCZ-FCBND&referer=myapp"></script>
+    <!-- 新 Bootstrap 核心 CSS 文件 -->
+        <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+        <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+        <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+        <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style type="text/css">
+        html,body{
+            width:100%;
+            height:100%;
+        }
+        *{
+            margin:0px;
+            padding:0px;
+        }
+        #container{
+            position: relative;
+        }
+        #others{
+            position: absolute;
+            bottom: 5%;
+            left: 5%;
+        }
+        .dwpng{
+            width: 45px;height: 45px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container" id="container">7
+    </div>
 
-    <body>
-        <div id="container"></div>
-        <script type="text/javascript">
-            var map = new BMap.Map("container");
-            map.centerAndZoom("宁波", 15);
-            map.enableScrollWheelZoom();
-
-            /*// 创建标注
-            var marker = new BMap.Marker(new BMap.Point(121.630943, 29.864467));
-            // 将标注添加到地图中
-            map.addOverlay(marker);
-            //********************************************监听标注事件
-            //点击事件
-            marker.addEventListener("click", function(e){
-                alert("当前坐标："+e.point.lng + ", " + e.point.lat)
-            });
-            //*******************************************可托拽的标注
-            //marker的enableDragging和disableDragging方法可用来开启和关闭标注的拖拽功能。
-            marker.enableDragging();
-            //监听标注的dragend事件来捕获拖拽后标注的最新位置
-            marker.addEventListener("dragend",function(e){
-                alert("new坐标："+e.point.lng + ", " + e.point.lat)
-            });*/
 
 
-            // 添加带有定位的导航控件
-            var navigationControl = new BMap.NavigationControl({
-                // 靠左上角位置
-                anchor: BMAP_ANCHOR_TOP_LEFT,
-                // LARGE类型
-                type: BMAP_NAVIGATION_CONTROL_LARGE,
-                // 启用显示定位
-                enableGeolocation: true
-            });
-            map.addControl(navigationControl);
-            /*// 添加定位控件
-            var geolocationControl = new BMap.GeolocationControl();
-            geolocationControl.addEventListener("locationSuccess", function(e){
-                // 定位成功事件
-                var address = '';
-                address += e.addressComponent.province;
-                address += e.addressComponent.city;
-                address += e.addressComponent.district;
-                address += e.addressComponent.street;
-                address += e.addressComponent.streetNumber;
-                alert("*****");
-                alert("当前定位地址为：" + address);
-                alert("new2坐标："+e.point.lng + ", " + e.point.lat);
-                // 创建标注
-                var marker = new BMap.Marker(e.point);
-                // 将标注添加到地图中
-                map.addOverlay(marker);
-                //********************************************监听标注事件
-                //点击事件
-                marker.addEventListener("click", function(e){
-                    alert("当前坐标："+e.point.lng + ", " + e.point.lat)
+    <script>
+        window.onload = function () {
+            function getwihei(){
+                var wi=window.screen.width;
+                var hi=window.screen.height;
+                //alert(wi+"  "+hi);
+                $('.container').css({'width': wi+'px', 'height': hi+'px'});
+                //document.getElementsByClassName("container").style.width=wi+"px";
+                //document.getElementsByClassName("container").style.height=hi+"px";
+            }
+            getwihei();
+            function init() {
+                var center = new qq.maps.LatLng(29.818722,121.563897);
+                var map = new qq.maps.Map(document.getElementById("container"), {
+                    // 地图的中心地理坐标。
+                    center: center,
+                    zoom: 15
                 });
-                //*******************************************可托拽的标注
-                //marker的enableDragging和disableDragging方法可用来开启和关闭标注的拖拽功能。
-                marker.enableDragging();
-                //监听标注的dragend事件来捕获拖拽后标注的最新位置
-                marker.addEventListener("dragend",function(e){
-                    alert("new坐标："+e.point.lng + ", " + e.point.lat)
+                function CustomZoomControl(controlDiv, map) {
+                    controlDiv.style.padding = "5px";
+                    controlDiv.innerHTML = "<img class='dwpng' src="+"{% static 'images/dw.png' %}"+" >";
+                    controlDiv.index = 1;//设置在当前布局中的位置
+
+                    function update() {
+                        var options = {timeout: 5000};
+                        var geolocation = new qq.maps.Geolocation();
+                        geolocation.getLocation(function (position) {
+                            alert(position.lat+" "+position.lng+" "+position.addr);
+                            map.panTo(new qq.maps.LatLng(position.lat,position.lng));
+                            center = new qq.maps.LatLng(position.lat,position.lng);
+                            marker.setMap(null);
+                            marker = new qq.maps.Marker({
+                                position: center,
+                                map: map
+                            });
+                            //获取标记的点击事件
+                            qq.maps.event.addListener(marker, 'click', function() {
+                                info.open();
+                                info.setContent('<div style="text-align:center;white-space:nowrap;'+
+                                'margin:10px;">单击标记</div>');
+                                info.setPosition(center);
+                            });
+                            marker.setDraggable(true);
+                        }, function () {
+                            alert("定位失败");
+                            map.panTo(new qq.maps.LatLng(29.818722,121.563897));
+                            center = new qq.maps.LatLng(29.818722,121.563897);
+                            marker.setMap(null);
+                            marker = new qq.maps.Marker({
+                                position: center,
+                                map: map
+                            });
+                            //获取标记的点击事件
+                            qq.maps.event.addListener(marker, 'click', function() {
+                                info.open();
+                                info.setContent('<div style="text-align:center;white-space:nowrap;'+
+                                'margin:10px;">单击标记</div>');
+                                info.setPosition(center);
+                            });
+                            marker.setDraggable(true);
+                        }, options);
+                    }
+
+                    update();
+                    //添加dom监听事件  一旦zoom的缩放级别放生变化则出发update函数
+                    qq.maps.event.addListener(controlDiv, "click", update);
+                }
+
+                //创建div元素
+                var customZoomDiv = document.createElement("div");
+                //获取控件接口设置控件
+                var customZoomControl = new CustomZoomControl(customZoomDiv, map);
+                //将控件添加到controls栈变量并将其设置在顶部位置
+                map.controls[qq.maps.ControlPosition.LEFT_CENTER].push(customZoomDiv);
+
+                var marker = new qq.maps.Marker({
+                    position: center,
+                    map: map
                 });
-            });
-            geolocationControl.addEventListener("locationError",function(e){
-                // 定位失败事件
-                alert(e.message);
-            });
-            map.addControl(geolocationControl);*/
+                //获取标记的点击事件
+                qq.maps.event.addListener(marker, 'click', function() {
+                    info.open();
+                    info.setContent('<div style="text-align:center;white-space:nowrap;'+
+                    'margin:10px;">单击标记</div>');
+                    info.setPosition(center);
+                });
+                marker.setDraggable(true);
+                var options = {timeout: 5000};
+                var geolocation = new qq.maps.Geolocation();
+                geolocation.getLocation(function (position) {
+                    alert(position.lat+" "+position.lng+" "+position.addr);
+                    map.panTo(new qq.maps.LatLng(position.lat,position.lng));
+                    center = new qq.maps.LatLng(position.lat,position.lng);
+                    marker.setMap(null);
+                    marker = new qq.maps.Marker({
+                        position: center,
+                        map: map
+                    });
+                    //获取标记的点击事件
+                    qq.maps.event.addListener(marker, 'click', function() {
+                        info.open();
+                        info.setContent('<div style="text-align:center;white-space:nowrap;'+
+                        'margin:10px;">单击标记</div>');
+                        info.setPosition(center);
+                    });
+                    marker.setDraggable(true);
+                }, function () {
+                    alert("定位失败");
+                    map.panTo(new qq.maps.LatLng(29.818722,121.563897));
+                    center = new qq.maps.LatLng(29.818722,121.563897);
+                    marker.setMap(null);
+                    marker = new qq.maps.Marker({
+                        position: center,
+                        map: map
+                    });
+                    //获取标记的点击事件
+                    qq.maps.event.addListener(marker, 'click', function() {
+                        info.open();
+                        info.setContent('<div style="text-align:center;white-space:nowrap;'+
+                        'margin:10px;">单击标记</div>');
+                        info.setPosition(center);
+                    });
+                    marker.setDraggable(true);
+                }, options);
 
-            var geolocation = new BMap.Geolocation();
+                //添加到提示窗
+                var info = new qq.maps.InfoWindow({
+                    map: map
+                });
 
 
+                /*window.addEventListener('message', function(event) {
+                    // 接收位置信息，用户选择确认位置点后选点组件会触发该事件，回传用户的位置信息
+                    var loc = event.data;
+                    if (loc && loc.module == 'locationPicker') {//防止其他应用也会向该页面post信息，需判断module是否为'locationPicker'
+                      console.log('location', loc);
+                    }
+                }, false);*/
+            }
+            init();
 
 
-            //单击获取点击的经纬度
-            map.addEventListener("click",function(e){
-                alert(e.point.lng + "," + e.point.lat);
-            });
-        </script>
-    </body>
+        }
+    </script>
+
+</body>
 </html>
