--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,256 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1,maximum-scale=1,user-scalable=no">
+
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/buijs/lib/latest/bui.css">
+    <script src="https://cdn.jsdelivr.net/npm/buijs/lib/zepto.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/buijs/lib/latest/bui.js"></script>
+    <script charset="utf-8" src="https://map.qq.com/api/js?v=2.exp&key=SPHBZ-USUC3-FT43D-YDVWO-G7CCZ-FCBND"></script>
+    <script type="text/javascript" src="https://apis.map.qq.com/tools/geolocation/min?key=SPHBZ-USUC3-FT43D-YDVWO-G7CCZ-FCBND&referer=myapp"></script>
+    <link rel="stylesheet" href="../../static/fonts/icons/iconfont.css">
+    <title>HelloPark</title>
+    <style>
+        html,body{
+            width:100%;
+            height:100%;
+        }
+        *{
+            margin:0px;
+            padding:0px;
+        }
+
+    .header{
+        display: flex;
+        line-height: .86rem;
+        background-color: #00bcd4;
+        padding:.12rem 0;
+    }
+    .header .header-left {
+        width: .64rem;
+        padding-left: .2rem;
+        float: left;
+    }
+    .header .header-left .person-icon {
+        text-align: center;
+        font-size: .4rem;
+        color: #fff;
+    }
+    
+    .header-input {
+        flex: 1;
+        height: .86rem;
+        padding-left: .32rem;
+        position: relative;
+    }
+    .header-input i {
+        position: absolute;
+        font-size: .32rem;
+        top:4px;
+        left:38px;
+    }
+    .header-input input {
+        line-height: .64rem;
+        border: 1px solid #fff;
+        background: #eee;
+        border-radius: .1rem;
+        margin-top: .12rem;
+        margin-left: .2rem;
+        padding-left: .2rem;
+        margin-bottom: .12rem;
+        width:80%;
+        padding-left:.8rem;
+    }
+    .header-right {
+        float: right;
+        min-width:  1.4rem;
+        padding: 0 .1rem;
+        text-align: center;
+    }
+    /* .arrow-icon {
+        color: #fff;
+        font-size: .4rem;
+    } */
+
+        #container{
+            position: relative;
+        }
+        #others{
+            position: absolute;
+            bottom: 5%;
+            left: 5%;
+        }
+        .dwpng{
+            width: 45px;height: 45px;
+        }
+
+    </style>
 </head>
 <body>
+    <div class="header">
+        <div class="header-left">
+            <a href="{% url 'center' %}"><i class="iconfont person-icon">&#xe605</i></a>
+        </div>
+        <div class="header-input">
+            <input type="text" placeholder="你想停在哪？">
+            <i class="icon-search"></i>
+        </div>
+        <!-- <div class="header-right">
+            <i class="iconfont arrow-icon">&#xe625</i>
+        </div> -->
+    </div>
+    <div class="container" id="container"></div>
 
+
+
+    <script>
+        window.onload = function () {
+            function getwihei(){
+                var wi=window.screen.width;
+                var hi=window.screen.height-50;
+                //alert(wi+"  "+hi);
+                $('.container').css({'width': wi+'px', 'height': hi+'px'});
+                //document.getElementsByClassName("container").style.width=wi+"px";
+                //document.getElementsByClassName("container").style.height=hi+"px";
+            }
+            getwihei();
+            function init() {
+                var center = new qq.maps.LatLng(29.818722,121.563897);
+                var map = new qq.maps.Map(document.getElementById("container"), {
+                    // 地图的中心地理坐标。
+                    center: center,
+                    zoom: 15
+                });
+                function CustomZoomControl(controlDiv, map) {
+                    controlDiv.style.padding = "5px";
+                    controlDiv.innerHTML = "<img class='dwpng' src="+"{% static 'images/dw.png' %}"+" >";
+                    controlDiv.index = 1;//设置在当前布局中的位置
+
+                    function update() {
+                        var options = {timeout: 5000};
+                        var geolocation = new qq.maps.Geolocation();
+                        geolocation.getLocation(function (position) {
+                            alert(position.lat+" "+position.lng+" "+position.addr);
+                            map.panTo(new qq.maps.LatLng(position.lat,position.lng));
+                            center = new qq.maps.LatLng(position.lat,position.lng);
+                            marker.setMap(null);
+                            marker = new qq.maps.Marker({
+                                position: center,
+                                map: map
+                            });
+                            //获取标记的点击事件
+                            qq.maps.event.addListener(marker, 'click', function() {
+                                info.open();
+                                info.setContent('<div style="text-align:center;white-space:nowrap;'+
+                                'margin:10px;">单击标记</div>');
+                                info.setPosition(center);
+                            });
+                            marker.setDraggable(true);
+                            $.post('/park/setSei/', {'lat':position.lat, 'lng': position.lng});
+
+                        }, function () {
+                            alert("定位失败");
+                            map.panTo(new qq.maps.LatLng(29.818722,121.563897));
+                            center = new qq.maps.LatLng(29.818722,121.563897);
+                            marker.setMap(null);
+                            marker = new qq.maps.Marker({
+                                position: center,
+                                map: map
+                            });
+                            //获取标记的点击事件
+                            qq.maps.event.addListener(marker, 'click', function() {
+                                info.open();
+                                info.setContent('<div style="text-align:center;white-space:nowrap;'+
+                                'margin:10px;">单击标记</div>');
+                                info.setPosition(center);
+                            });
+                            marker.setDraggable(true);
+                        }, options);
+                    }
+
+                    update();
+                    //添加dom监听事件  一旦zoom的缩放级别放生变化则出发update函数
+                    qq.maps.event.addListener(controlDiv, "click", update);
+                }
+
+                //创建div元素
+                var customZoomDiv = document.createElement("div");
+                //获取控件接口设置控件
+                var customZoomControl = new CustomZoomControl(customZoomDiv, map);
+                //将控件添加到controls栈变量并将其设置在顶部位置
+                map.controls[qq.maps.ControlPosition.LEFT_CENTER].push(customZoomDiv);
+
+                var marker = new qq.maps.Marker({
+                    position: center,
+                    map: map
+                });
+                //获取标记的点击事件
+                qq.maps.event.addListener(marker, 'click', function() {
+                    info.open();
+                    info.setContent('<div style="text-align:center;white-space:nowrap;'+
+                    'margin:10px;">单击标记</div>');
+                    info.setPosition(center);
+                });
+                marker.setDraggable(true);
+                var options = {timeout: 5000};
+                var geolocation = new qq.maps.Geolocation();
+                geolocation.getLocation(function (position) {
+                    alert(position.lat+" "+position.lng+" "+position.addr);
+                    map.panTo(new qq.maps.LatLng(position.lat,position.lng));
+                    center = new qq.maps.LatLng(position.lat,position.lng);
+                    marker.setMap(null);
+                    marker = new qq.maps.Marker({
+                        position: center,
+                        map: map
+                    });
+                    //获取标记的点击事件
+                    qq.maps.event.addListener(marker, 'click', function() {
+                        info.open();
+                        info.setContent('<div style="text-align:center;white-space:nowrap;'+
+                        'margin:10px;">单击标记</div>');
+                        info.setPosition(center);
+                    });
+                    marker.setDraggable(true);
+                }, function () {
+                    alert("定位失败");
+                    map.panTo(new qq.maps.LatLng(29.818722,121.563897));
+                    center = new qq.maps.LatLng(29.818722,121.563897);
+                    marker.setMap(null);
+                    marker = new qq.maps.Marker({
+                        position: center,
+                        map: map
+                    });
+                    //获取标记的点击事件
+                    qq.maps.event.addListener(marker, 'click', function() {
+                        info.open();
+                        info.setContent('<div style="text-align:center;white-space:nowrap;'+
+                        'margin:10px;">单击标记</div>');
+                        info.setPosition(center);
+                    });
+                    marker.setDraggable(true);
+                }, options);
+
+                //添加到提示窗
+                var info = new qq.maps.InfoWindow({
+                    map: map
+                });
+
+
+                /*window.addEventListener('message', function(event) {
+                    // 接收位置信息，用户选择确认位置点后选点组件会触发该事件，回传用户的位置信息
+                    var loc = event.data;
+                    if (loc && loc.module == 'locationPicker') {//防止其他应用也会向该页面post信息，需判断module是否为'locationPicker'
+                      console.log('location', loc);
+                    }
+                }, false);*/
+            }
+            init();
+
+
+        }
+    </script>
 </body>
 </html>
