--- a/templates/base.html
+++ b/templates/base.html
@@ -25,20 +25,16 @@
 
 <a href="{% url 'login' %}">login</a><hr>
 <a href="{% url 'register' %}">register</a><hr>
-
-<a href="{% url 'bai_du_map' %}">baidumap</a><hr>
-
 <a href="{% url 'test' %}">test</a><hr>
 
 
     <a href="{% url 'add_park' %}">添加车位信息</a><hr>
     <a href="{% url 'center' %}">个人中心</a><hr>
     <a href="{% url 'index' %}">首页</a><hr>
-    <a href="{% url 'test' %}">test</a><hr>
-    <a href="{% url 'test' %}">test</a><hr>
-    <a href="{% url 'test' %}">test</a><hr>
-    <a href="{% url 'test' %}">test</a><hr>
-    <a href="{% url 'test' %}">test</a><hr>
+    <a href="{% url 'wallet' %}">我的钱包</a><hr>
+    <a href="{% url 'car_bind' %}">我的车辆</a><hr>
+    <a href="{% url 'park' %}">我的车位</a><hr><br><br>
+    <a href="{% url 'order' %}">订单</a><hr>
     <a href="{% url 'test' %}">test</a><hr>
     <a href="{% url 'test' %}">test</a><hr>
     <a href="{% url 'test' %}">test</a><hr>
