--- a/templates/login_register.html
+++ b/templates/login_register.html
@@ -17,7 +17,7 @@
 <body>
 	<div class="lowin">
 		<div class="lowin-brand">
-			<img src="{% static 'images/kodinger.jpg' %}" alt="logo">
+			<img src="{% static 'images/parklogo.jpg' %}" alt="logo"><!-- kodinger -->
 		</div>
 		<div class="lowin-wrapper">
 			<div class="lowin-box lowin-login">
