--- a/templates/center.html
+++ b/templates/center.html
@@ -35,24 +35,24 @@
             <p class="grade">积分 0</p>
         </div>
         <ul class="bui-list nav-list">
-            <li class="bui-btn bui-box " href="center/mycar.html">
-                <div class="icon"><i class="iconfont icon-yellow">&#xe6f1;</i></div>
-                <div class="span1">我的车辆</div>
-                <i class="icon-listright"></i>
-            </li>
             <li class="bui-btn bui-box">
                 <div class="icon"><i class="iconfont icon-red">&#xe669;</i></div>
-                <div class="span1">我的钱包</div>
+                <div class="span1"><a href="{% url 'wallet' %}">我的钱包</a></div>
+                <i class="icon-listright"></i>
+            </li>
+            <li class="bui-btn bui-box " href="center/mycar.html">
+                <div class="icon"><i class="iconfont icon-yellow">&#xe6f1;</i></div>
+                <div class="span1"><a href="{% url 'car_bind' %}">我的车辆</a></div>
                 <i class="icon-listright"></i>
             </li>
             <li class="bui-btn bui-box">
                 <div class="icon"><i class="iconfont icon-thinblue">&#xe6fa;</i></div>
-                <div class="span1">车位管理</div>
+                <div class="span1"><a href="{% url 'park' %}">车位管理</a></div>
                 <i class="icon-listright"></i>
             </li>
             <li class="bui-btn bui-box">
                 <div class="icon"><i class="icon icon-green">&#xe62d;</i></div>
-                <div class="span1">我的订单</div>
+                <div class="span1"><a href="{% url 'order' %}">我的订单</a></div>
                 <i class="icon-listright"></i>
             </li>
             <li class="bui-btn bui-box">
@@ -70,19 +70,26 @@
                 <div class="span1">更多设置</div>
                 <i class="icon-listright"></i>
             </li>
+            {% if user.is_authenticated %}
+            <li class="bui-btn bui-box">
+                <div class="icon"><img src="{% static 'images/poweroff.png' %}"  ></div>
+                <div class="span1"><a href="{% url 'logout' %}">退出登录</a></div>
+                <i class="icon-listright"></i>
+            </li>
+            {% endif %}
         </ul>
     </main>
     <footer>
         <!-- 底部d导航栏 -->
         <ul class="bui-nav">
             <li class="bui-btn bui-box-vertical">
-                <a href="./index/index.html">
+                <a href="{% url 'index' %}">
                     <i class="icon-home"></i>
                     <div class="span1">首页</div>
                 </a>
             </li>
             <li class="bui-btn bui-box-vertical active"><i class="icon">&#xe67a;</i>
-                <div class="span1">我的</div>
+                <a href="{% url 'center' %}" ><div class="span1">我的</div></a>
             </li>
         </ul>
     </footer>
