--- a/templates/My_Wallet_Detail.html
+++ b/templates/My_Wallet_Detail.html
@@ -13,6 +13,9 @@
             html {
                 background: rgba(245,245,245,1);
             }
+			body{
+        overflow-y: auto;
+    }
             .coin-li {
                 margin: 5px;
             }
